@@ -1,3 +1,5 @@
+2006/5/5 -- released version 20060505_trunk
+
 2006/5/4 -- released version 20060504_trunk
 
 2006/5/3 -- released version 20060503_trunk
